--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+# files
+/src/config.js
+
 # testing
 /coverage
 
@@ -18,7 +21,6 @@
 .env.test.local
 .env.production.local
 
-./src/config.js
 
 npm-debug.log*
 yarn-debug.log*
