--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "react-stock-crawler",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "version": "0.1.4",
+  "private": false,
+  "peerDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "react-ticker": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "distribute": "mkdir dist && dd"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +34,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/preset-react": "^7.10.4"
+    "@babel/preset-react": "^7.10.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   }
 }
